# torobo

./: .gitmodules  CMakeLists.txt  README.md  package.xml  screenlog.0
dp_lwpr/: CMakeLists.txt
dp_lwpr/.svn/: wc.db
dp_lwpr/src/notes/: Untitled.ipynb
dp_lwpr/src/notes/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
dp_lwpr/src/scripts/: lwpr.py  test_lwprs_1D.py  test_nd.py
launch/: torobo.launch
seds/: CMakeLists.txt  package.xml
seds/include/: GMR.h  GMR_Eigen.h
seds/src/: GMR.cpp  GMR_Eigen.cpp
src/: IKVelSolver.cpp  ik_sub.cpp  ik_torobo.cpp  joints_pub.py  sub.py  teach_jnt_to_cart.cpp
src/services/: ik_service.py  joints_client.py  joints_server.py  torobo_ik.py
src/unused/: teach_jnt_to_cart.cpp  unused_py.py
srv/: Joints.srv  SolveDiffIK.srv
torobo/: CMakeLists.txt  package.xml
torobo_control/: CMakeLists.txt  package.xml
torobo_ik/: CMakeLists.txt  package.xml
torobo_ik/include/torobo_ik/: ik_solver.h
torobo_ik/include/trac_ik_torobo/: ik_solver.h
torobo_ik/launch/: torobo.launch
torobo_ik/src/: ik_sub.cpp  joints_pub.py  sub.py
torobo_ik/src/services/: torobo_ik.py
torobo_ik/srv/: SolveDiffIK.srv
torobo_ros/toroboarm_robot/: README.md
torobo_ros/toroboarm_robot/toroboarm_gripper_bringup/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_bringup/launch/: bringup_real.launch  bringup_sim.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_control/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_control/config/: toroboarm_gripper_control.yaml
torobo_ros/toroboarm_robot/toroboarm_gripper_control/launch/: toroboarm_gripper_control.launch  toroboarm_real_control.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_control/src/: toroboarm_control_node.cpp
torobo_ros/toroboarm_robot/toroboarm_gripper_description/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_description/launch/: display_toroboarm.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_description/launch/config/: toroboarm_description.rviz
torobo_ros/toroboarm_robot/toroboarm_gripper_description/meshes/: finger.stl  left_finger.dae  link0_fixed_axis.dae  link1_fixed_axis.dae  link3_fixed_axis.dae  link4_fixed_axis.dae  link5_fixed_axis.dae  link6.dae  link6.stl
torobo_ros/toroboarm_robot/toroboarm_gripper_description/urdf/: toroboarm_gripper.gazebo  toroboarm_gripper.transmission.xacro  toroboarm_gripper.urdf.xacro  toroboarm_gripper_properties.urdf.xacro
torobo_ros/toroboarm_robot/toroboarm_gripper_description/urdf/sensors/: kinect.urdf.xacro
torobo_ros/toroboarm_robot/toroboarm_gripper_driver/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_driver/launch/: toroboarm_gripper_driver.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_driver/scripts/: command_sender.py  joint_state_publisher.py
torobo_ros/toroboarm_robot/toroboarm_gripper_gazebo/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_gazebo/launch/: toroboarm_world.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_moveit_config/: CMakeLists.txt  _setup_assistant  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  sensors_rgbd.yaml  toroboarm_gripper.srdf
torobo_ros/toroboarm_robot/toroboarm_gripper_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  toroboarm_gripper_moveit_config.launch  toroboarm_gripper_moveit_controller_manager.launch.xml  toroboarm_gripper_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_pick_and_place/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_gripper_pick_and_place/config/: toroboarm_gripper_grasp_data.yaml
torobo_ros/toroboarm_robot/toroboarm_gripper_pick_and_place/launch/: grasp_generator_server.launch
torobo_ros/toroboarm_robot/toroboarm_gripper_pick_and_place/scripts/: pick_and_place.py
torobo_ros/toroboarm_robot/toroboarm_seven_bringup/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_bringup/launch/: bringup_real.launch  bringup_sim.launch
torobo_ros/toroboarm_robot/toroboarm_seven_control/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_control/config/: toroboarm_control.yaml
torobo_ros/toroboarm_robot/toroboarm_seven_control/launch/: toroboarm_control.launch  toroboarm_real_control.launch
torobo_ros/toroboarm_robot/toroboarm_seven_description/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_description/launch/: display_toroboarm.launch
torobo_ros/toroboarm_robot/toroboarm_seven_description/launch/config/: toroboarm_seven_description.rviz
torobo_ros/toroboarm_robot/toroboarm_seven_description/meshes/: link0_fixed_axis.dae  link1_fixed_axis.dae  link2_fixed_axis.dae  link3_fixed_axis.dae  link4_fixed_axis.dae  link5_fixed_axis.dae  link6_fixed_axis.dae  link7_fixed_axis.dae
torobo_ros/toroboarm_robot/toroboarm_seven_description/urdf/: toroboarm.gazebo  toroboarm.urdf.xacro
torobo_ros/toroboarm_robot/toroboarm_seven_driver/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_driver/launch/: toroboarm_driver.launch
torobo_ros/toroboarm_robot/toroboarm_seven_driver/scripts/: command_sender.py  joint_state_publisher.py
torobo_ros/toroboarm_robot/toroboarm_seven_gazebo/: CMakeLists.txt  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_gazebo/launch/: toroboarm_world.launch
torobo_ros/toroboarm_robot/toroboarm_seven_gazebo/worlds/: toroboarm.world
torobo_ros/toroboarm_robot/toroboarm_seven_moveit_config/: CMakeLists.txt  _setup_assistant  package.xml
torobo_ros/toroboarm_robot/toroboarm_seven_robot/: CMakeLists.txt  package.xml
(+19 files in other folders)
