<?xml version="1.0"?>
<package>
  <name>trac_ik_torobo</name>
  <version>1.4.11</version>
  <description> This package contains the source code for testing and comparing trac_ik</description>
  <author>Patrick Ogunmolu</author>
  <maintainer email="patlekano@gmail.com">Patrick Ogunmolu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy_tutorials</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>xacro</run_depend>

</package>
