<?xml version="1.0"?>
<package>
  <name>seds</name>
  <version>0.0.1</version>
  <description>
    Stable Estimator of Dynamical Systems (SEDS)
    This package provides realtime, robust, and reactive controller
    to perform reaching movement. For more information about SEDS
    refer to the following paper:

    S.M. Khansari-Zadeh and A. Billar, "Learning Stable Non-Linear
    Dynamical Systems with Gaussian Mixture Models", IEEE Trans. on
    Robotics, 2011.

    Please acknowledge the authors by citing the paper above in any
    academic and non-academic publication that have made use of this
    code or part of it.
  </description>
  <author>Mohammad Khansari</author>
  <maintainer email="patlekano@gmail.com">Patrick Ogunmolu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>MathLib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>MathLib</run_depend>

</package>
