<?xml version="1.0"?>
<package>
  <name>torobo</name>
  <version>0.0.0</version>
  <description>
    For the torobo manipulator
  </description>
  <maintainer email="patlekano@gmail.com">Lekan Ogunmolu</maintainer>
  <author>Lekan Ogunmolu</author>
  <license>BSD</license>

  <url type="website">http://scriptedonachip.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>torobo_ik</run_depend>
  <run_depend>lyapunov_learner</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
